# USEF-TSE

./: .gitignore  README.md  eval.py  eval.sh  inference.py  modal_entry.py  pyproject.toml  requirements.txt  run_inference.md
chkpt/USEF-SepFormer/: README.md  config.yaml  model.py
chkpt/USEF-SepFormer/wsj0-2mix/: readme
chkpt/USEF-TFGridNet/: README.md  config.yaml  model.py
data/test/wham!/: aux.scp  mix.scp  ref.scp
data/test/whamr!/: aux.scp  mix.scp  ref.scp
data/test/wsj0-2mix/: mix.scp  ref.scp
models/: model_USEF_SepFormer.py  model_USEF_TFGridNet.py
models/local/: PositionalEncoding.py  TFgridnet.py  TransformerEncoder.py  TransformerEncoderCross.py  attention.py  dataio.py  normalization.py  torch_audio_backend.py
utils/: average.py  feature.py
